--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue build/"
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
   },
   "dependencies": {
     "vue": "^2.5.2",
