--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
   },
   "dependencies": {
+    "jsdom": "^14.0.0",
+    "location": "^0.0.1",
+    "navigator": "^1.0.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -42,6 +46,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jQuery": "^1.7.4",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
